Bug 157639 - NVDA cannot announce status bar in dialogs (e.g. Writer's "Edit Contour" dialog)
Summary: NVDA cannot announce status bar in dialogs (e.g. Writer's "Edit Contour" dialog)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.2.0
Keywords: accessibility
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2023-10-06 14:28 UTC by Michael Weghorn
Modified: 2023-10-06 22:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2023-10-06 14:28:44 UTC
Copying from the respective NVDA issue in Github:
https://github.com/nvaccess/nvda/issues/15591

> ### Steps to reproduce:
> 
> 1) Start LibreOffice Writer (tested with LibreOffice 7.6.2)
> 2) insert a Formula: "Insert" -> "OLE Object" -> "Formula Object", type any formula, e.g. "1+1=2"
> 3) click outside of the formula then click the formula object again to focus it
> 4) in Writer's menu, select "Format" -> "Wrap" -> "Edit Contour"
> 5) Once the dialog shows up, press NVDA+End to announce the status bar
> 
> ### Actual behavior:
> 
> NVDA says:
> "no status bar information"
> 
> 
> ### Expected behavior:
> 
> NVDA should announce the content of the status bar in that dialog, e.g.:
> "0.00" / 0.00" 0.50" x 0.18"
> 
> ### NVDA logs, crash dumps and other attachments:
> 
> ### System configuration
> #### NVDA installed/portable/running from source:
> 
> installed
> 
> #### NVDA version:
> 
> NVDA 2023.2
> 
> 
> #### Windows version:
> 
> Windows 10
> 
> #### Name and version of other software in use when reproducing the issue:
> 
> LibreOffice 7.6.2
> 
> #### Other information about your system:
> 
> ### Other questions
> #### Does the issue still occur after restarting your computer?
> 
> yes
> 
> #### Have you tried any other versions of NVDA? If so, please report their behaviors.
> 
> NVDA git master as of a380b6a76a0a29df32e57c1bd974b11a895ac0c8, running from source
> 
> #### If NVDA add-ons are disabled, is your problem still occurring?
> 
> n/a
> 
> #### Does the issue still occur after you run the COM Registration Fixing Tool in NVDA's tools menu?
> 
> n/a
Comment 1 Michael Weghorn 2023-10-06 18:37:49 UTC
Pending LO Gerrit change and NVDA PR:

https://gerrit.libreoffice.org/c/core/+/157659
https://github.com/nvaccess/nvda/pull/15592

Slightly, but not directly related:
https://gerrit.libreoffice.org/c/core/+/157658
Comment 2 Commit Notification 2023-10-06 22:05:57 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f8e16f26a037a71349dc1a197b5ace204acb123b

tdf#157639 a11y: Set proper role for status bar

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Weghorn 2023-10-06 22:07:17 UTC
(In reply to Michael Weghorn from comment #1)
> Pending LO Gerrit change and NVDA PR:
> 
> https://gerrit.libreoffice.org/c/core/+/157659
> https://github.com/nvaccess/nvda/pull/15592
> 
> Slightly, but not directly related:
> https://gerrit.libreoffice.org/c/core/+/157658

Closing as fixed, since the LO patches are merged.
NVDA PR still waiting for review, but that's tracked on NVDA side.