tdf#157639 a11y: Set proper role for status bar

Set `css::accessibility::AccessibleRole::STATUS_BAR`
as role for the `VclHBox`/`VclVBox` instances created
for `GtkStatusBar` nodes in .ui files, so that they
are properly exposed to the accessibility layer.

This is e.g. required to make NVDA's feature to announce
the status bar content (when pressing NVDA+End) work.

An additional change on NVDA side is needed to make the
announcement work. Pending PR:
https://github.com/nvaccess/nvda/pull/15592

Change-Id: Iac587be96ec941afd7625ee363949f5da0cbc873
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157659
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>